# leg_emoji

./: app.sh  main.py  pyproject.toml  requirements.txt
