[tool.poetry]
name = "leg_emoji"
version = "0.1.0"
description = ""
authors = ["Chris Dillon <cdillon@mitre.org>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
